# hoki

./: .gitignore  CMakeLists.txt  README.md
examples/: logan_pipeline.sh
scripts/: bench_codon_encoding.py  measure_lhp.py
src/: aa.hpp  batch.hpp  cigar.hpp  container.hpp  convert.hpp  format.hpp  global.hpp  ingest.hpp  main.cpp  merge.hpp  partition.hpp  query.hpp
tests/: check_ingest.py  check_partition_overflow.cpp
